# parser_vacancy

./: README.md  pyproject.toml
src/: error.py  filesaver.py  func_user.py  main.py  vacancy.csv  vacancy.json  vacancy.py  vacancyapi.py
tests/: test_filesaver.py  test_func_user.py  test_vacancy.py
