[tool.poetry]
name = "oop-course-project"
version = "0.1.0"
description = ""
authors = ["Violetta <lotsmanovavioletta@gmail.com>"]
readme = "README.md"
packages = [{include = "oop_course_project"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
